# tracker-lite

./: AUTHORS  Makefile.am  README  build.sh  config.h.in  configure.ac
build-aux/: ax_boost_signals.m4
src/: Makefile.am  database.cpp  database.h  device-manager.cpp  device-manager.h  file-metadata-extractor.cpp  file-metadata-extractor.h  file-metadata.cpp  file-metadata.h  filesystem-scanner.cpp  filesystem-scanner.h  string-encoding.cpp  string-encoding.h  taglib-metadata-extractor.cpp  taglib-metadata-extractor.h  thread-pool.cpp  thread-pool.h  tracker-lite.cpp
src/ce-device-manager/: Makefile  Makefile.am  Makefile.in  ce-device-manager.c  ce-device-manager.h  ce-device.c  ce-device.h
src/ce-devices/: Makefile.am  ce-device.c  ce-device.h
src/common/: console-logging.cpp  console-logging.h  file-metadata.h  logging.cpp  logging.h  statistics.cpp  statistics.h  string-encoding.cpp  string-encoding.h
src/crawlers/lib/: Makefile.am  tlite-crawler-object.c  tlite-crawler-object.h
src/database/: database.cpp  database.h  file-database-persistor.cpp  file-database-persistor.h
src/devicemanager/: device-manager.cpp  device-manager.h
src/extractors/: Makefile.am  taglib-metadata-extractor.c  taglib-metadata-extractor.cpp  taglib-metadata-extractor.h  tlite-metadata-info.c  tlite-metadata-info.h
src/filesystem/: filesystem-scanner.cpp  filesystem-scanner.h
src/metadata/: file-metadata-extractor.cpp  file-metadata-extractor.h  metadata-extract-pool.cpp  metadata-extract-pool.h  thread-pool.cpp  thread-pool.h
src/metadata/extractors/: taglib-metadata-extractor.h
src/miners/: Makefile.am
src/miners/lib/: Makefile.am  tlite-miner-object.c  tlite-miner-object.h
src/server/: Makefile.am  options.c  options.h  tlite.c
src/store/: Makefile.am  tlite-store-object.c  tlite-store-object.h
src/subsystems/lib/: Makefile.am  tlite-subsystem-object.c  tlite-subsystem-object.h
tests/: Makefile.am
tests/extractors/: Makefile.am  tlite-metadata-info-test.c
